# software-praktikum

./: .gitignore  Cargo.toml  config.toml  example.toml
common/: Cargo.toml
common/src/: lib.rs  measurement_ids.rs
common/src/api/: config.rs  definitions.rs  mod.rs  probes.rs
common/src/configuration/: anchors.rs  configuration.rs  http.rs  mod.rs  ping.rs  probes.rs  topology.rs  traceroute.rs
configurator/: Cargo.toml  config.toml
configurator/src/: main.rs  prompt.rs
configurator/src/prompt/: general.rs  http.rs  mod.rs  ping.rs  probe.rs  topology.rs  traceroute.rs
executor/: Cargo.toml  measurement_ids.toml
executor/src/: input.rs  io.rs  main.rs  probe.rs  ripe.rs  transform.rs
executor/src/api/: create_measurement.rs  fetch_probe_information.rs  mod.rs
executor/src/domain/: config.rs  definition.rs  mod.rs  probes.rs
executor/src/transform/: builder.rs  connections.rs  mod.rs  templates.rs
fetcher/: Cargo.toml
fetcher/src/: fetch_measurement_data.rs  io.rs  main.rs
fetcher/src/api/: fetch_measurement_data.rs  mod.rs  results.rs
notebooks/: test1.ipynb
notebooks/.ipynb_checkpoints/: test1-checkpoint.ipynb
notebooks/data/test1/: http.csv  measurement_ids.toml
results/notebooks/: europe_map.ipynb  full_http.ipynb  full_ping.ipynb  full_time_all.ipynb  full_traceroute.ipynb  test1.ipynb
results/notebooks/data/europe/: NUTS_RG_10M_2024_3035.dbf
results/notebooks/data/full/configuration/: http_ids.toml  measurement_ids.toml  ping_ids.toml  trace_ids.toml
results/notebooks/data/test1/: config.toml  ping.csv
