[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { version = "0.1.0", path = "../common" }
dialoguer.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
clap.workspace = true
futures.workspace = true
thiserror.workspace = true
uuid.workspace = true